[package]
name = "launchpad-lattice"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["2high4schooltoday"]
description = "Launchpad Lattice data format parser and renderer"
repository = "https://github.com/2high4schooltoday/Launchpad-Lattice"
homepage = "https://github.com/2high4schooltoday/Launchpad-Lattice"
documentation = "https://github.com/2high4schooltoday/Launchpad-Lattice/blob/main/docs/spec/launchpad-lattice.md"
readme = "README.md"
keywords = ["launchpad", "config", "data-format", "serialization"]
categories = ["parser-implementations", "encoding"]

[lib]
name = "launchpad_lattice"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
