[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad-lattice"
version = "0.1.0"
description = "Pure Python parser and renderer for Launchpad Lattice"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "2high4schooltoday" }]

[tool.setuptools]
packages = ["launchpad_lattice"]
